--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header  class="container">
         <section class="left-section">
             <div class="logo">
-                <img src="./logo.png" alt="icono-logo">
+                <img src="./imagenes/logo.png" alt="icono-logo">
             </div>
             <div class="company-name">
                 <h1>Jeffempa</h1>
@@ -38,7 +38,7 @@
         <section class="info">
             <h1>Radicado en Perú</h1>
             <p>20 años</p>
-            <img src="./mi-foto.png" alt="photo">
+            <img src="./imagenes/mi-foto.png" alt="photo">
         </section>
         <section class="info-text">
             <h1>Arte, 
@@ -65,17 +65,17 @@
             <section>
                 <ul class="iconos">
                     <li>
-                        <img src="./Ellipse.png" alt="elipse" class="circle">
+                        <img src="./imagenes/Ellipse.png" alt="elipse" class="circle">
                         <img src="./iconos/diseño-web.png" alt="web-design" class="icons">
                         <h3>Diseño Web</h3>
                     </li>
                     <li>
-                        <img src="./Ellipse.png" alt="elipse" class="circle">
+                        <img src="./imagenes/Ellipse.png" alt="elipse" class="circle">
                         <img src="./iconos/Diseño-movil.png" alt="mobile-design" class="icons">
                         <h3>Diseño Movíl</h3>
                     </li>
                     <li>
-                        <img src="./Ellipse.png" alt="elipse" class="circle">
+                        <img src="./imagenes/Ellipse.png" alt="elipse" class="circle">
                         <img src="./iconos/illustracion.png" alt="illustrator" class="icons">
                         <h3>Ilustración</h3>
                     </li>
